--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -8,7 +8,12 @@
         android:id="@+id/action_save"
         android:title="@string/action_save"
         android:icon="@drawable/ic_done"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_call_supplier"
+        android:title="Call Supplier"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_delete"
